plugins {
    id 'org.springframework.boot' version '2.5.13'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.gist'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.auth0:java-jwt:4.0.0'
    implementation "io.springfox:springfox-boot-starter:3.0.0"
    implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.poi:poi:3.9'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4'


    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java'

    compileOnly 'org.projectlombok:lombok'
    implementation 'com.github.napstr:logback-discord-appender:1.0.0'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

task copyPrivate(type: Copy) {
    copy {
        from './gijol-privates'
        include "*.yml"
        include "*.xml"
        into 'src/main/resources/privates'
    }
}
